--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Ahmad Shrar | Frontend Developer & Web Portfolio</title>
     <link rel="icon" href="images/logo.png">
     <meta name="google-site-verification" content="HhdN3l0ILJM7-JCdSYP0Ai1kCOkZhrMifrdV9tf4q88" />
+    <meta name="google-site-verification" content="FGxpxJEin4JVylwjDAb7_w4t132zHiO_ZFrgPEd8Q20" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <meta property="og:title" content="Ahmad Shrar | Frontend Developer & Web Portfolio">
 <meta property="og:description" content="I'm Ahmad — a Frontend Developer building modern, responsive, and high-performance websites using React, JavaScript, and Bootstrap. Explore my latest projects.">
@@ -693,3 +694,4 @@ document.querySelector('.contact-form').addEventListener('submit', function(e) {
 
 
 </html>
+
